cabal-version:      2.4
name:               surf
version:            0.1.0.0

synopsis: A HTTP(S) client that reads requests from a file

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Magnus Nybråten Malmquist
maintainer:         magnusnym97@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable surf
    main-is:          Main.hs

    other-modules:
      Url,
      ParseRequestSpec

    build-depends:
        base ^>=4.14.3.0,
        http-client ^>= 0.6.4.1,
        req ^>= 3.9.0,
        text ^>= 1.2.4,
        bytestring ^>= 0.10.12.0,
        case-insensitive ^>= 1.2.1.0,
        rainbow ^>= 0.34.2.2
    hs-source-dirs:   app
    default-language: Haskell2010

    -- LANGUAGE extensions
    default-extensions:
      DataKinds
      TupleSections
      OverloadedStrings
